fixed navbar spacing

--- a/T-Bank/src/main/webapp/HomePage.css
+++ b/T-Bank/src/main/webapp/HomePage.css
@@ -7,7 +7,7 @@
 }
 
 li {
-    margin-bottom:50px;
+    margin-bottom:30px;
     font-family: Times New Roman, serif;
     font-weight:bold;
     padding:4px;
